# opengl-framework

./: CMakeLists.txt  build.sh  main.cpp
include/: Camera.hpp  OpenGLWrapper.hpp
src/: OpenGLWrapper.cpp
